fix extra padding to the left of the hexes from spacing margin

--- a/app/styles/hex.less
+++ b/app/styles/hex.less
@@ -34,6 +34,10 @@
   background-color: transparent;
   color: @background-color;
 
+  &:nth-child(1) {
+    margin-left: 0;
+  }
+
   &:before {
     position: absolute;
     content: " ";
